Changes in layout and add confirm dialog

--- a/src/main/resources/static/partial/book.html
+++ b/src/main/resources/static/partial/book.html
@@ -15,10 +15,10 @@
 				</div>
 				</md-input-container>
 				<div>
-					<md-button class="md-fab md-primary md-hue-3" type="submit"
+					<md-button class="md-fab md-primary" type="submit"
 						aria-label="Save" title="Save"> <md-icon>save</md-icon>
 					</md-button>
-					<md-button class="md-fab md-warn md-hue-3" ng-click="cancelForm()"
+					<md-button class="md-fab md-warn" ng-click="cancelForm()"
 						aria-label="Clear" title="Clear"> <md-icon>clear</md-icon>
 					</md-button>
 				</div>
@@ -34,9 +34,9 @@
 				<span>{{book.id}}</span>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;<span>{{book.name}}</span>
 			</div>
 			<md-button ng-click="deleteBook(book)" aria-label="Delete"
-				title="Delete" class="md-fab md-warn md-hue-3"> <md-icon>delete_forever</md-icon>
+				title="Delete" class="md-fab md-warn"> <md-icon>delete_forever</md-icon>
 			</md-button> <md-button ng-click="editBook(book)" aria-label="Edit" title="Edit"
-				class="md-fab md-accent md-hue-3"> <md-icon>edit</md-icon>
+				class="md-fab md-accent"> <md-icon>edit</md-icon>
 			</md-button> </md-list-item> </md-list> </md-content>
 		</div>
 		<div flex="10"></div>
