--- a/src/main/resources/static/partial/login-form.html
+++ b/src/main/resources/static/partial/login-form.html
@@ -1,6 +1,4 @@
 <div align="center">
-	<div ng-show="controller.error">There was a problem logging in.
-		Please try again.</div>
 	<form name="loginForm" method="post" novalidate="novalidate"
 		ng-submit="loginCtrl.login()">
 		<div>
@@ -13,22 +11,13 @@
 			<input type="password" id="password" name="password" required
 				ng-model="loginCtrl.credentials.password" /></md-input-container>
 		</div>
-		<div ng-messages="loginForm.username.$error" ng-show="showHints">
-			<div ng-message="required">This is required.</div>
-			<div ng-message="md-maxlength">The description must be less
-				than 50 characters long.</div>
-		</div>
-		<div ng-messages="loginForm.password.$error" ng-show="showHints">
-			<div ng-message="required">This is required.</div>
-			<div ng-message="md-maxlength">The description must be less
-				than 50 characters long.</div>
-		</div>
 		<div>
 			<md-button class="md-fab md-primary" type="submit" aria-label="Login"
 				title="Login"> <md-icon>save</md-icon> </md-button>
-			<md-button class="md-fab md-warn"
-				aria-label="Clear" title="Clear"> <md-icon>clear</md-icon>
-			</md-button>
+			<!-- <md-button class="md-fab md-warn" aria-label="Clear" title="Clear">
+			<md-icon>clear</md-icon> </md-button> -->
 		</div>
 	</form>
+	<div ng-show="loginCtrl.error">There was a problem logging in.
+		Please try again.</div>
 </div>
