--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,21 +44,19 @@
 					ng-click="loginCtrl.goto('/home')"> <md-tooltip
 					md-direction="bottom" md-visible="tooltipVisible">Home</md-tooltip>
 				<md-icon>home</md-icon></md-button>
-				<md-button aria-label="Empresa" class="md-raised"
-					ng-click="loginCtrl.goto('/book')"> <md-tooltip
+				<md-button aria-label="Book" class="md-raised"
+					ng-click="loginCtrl.goto('/book')" ng-show="authenticated"> <md-tooltip
 					md-direction="bottom" md-visible="tooltipVisible">Book</md-tooltip>
 				<md-icon>location_city</md-icon> </md-button>
 								<md-button aria-label="Login" class="md-raised md-warn"
-					ng-click="loginCtrl.goto('/login')" ng-show="!authenticated">
+					ng-click="loginCtrl.goto('/login-form')" ng-show="!authenticated">
 				<md-tooltip md-direction="bottom" md-visible="tooltipVisible">Login</md-tooltip>
-				<md-icon>account_circle</md-icon> </md-button>
+				<md-icon>power_settings_new</md-icon> </md-button>
 				<md-button aria-label="Logout" class="md-raised md-accent"
 					ng-click="loginCtrl.logout()" ng-show="authenticated">
 				<md-tooltip md-direction="bottom" md-visible="tooltipVisible">Logout</md-tooltip>
-				<md-icon>account_circle</md-icon></md-button>
+				<md-icon>power_settings_new</md-icon></md-button>
 			</div>
-				<md-switch ng-model="authenticated" aria-label="Logged">
-				{{userrrName}} </md-switch>
 			<span flex=""></span>
 		</div>
 		</md-toolbar>
