--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,21 +41,17 @@
 			<span flex=""></span>
 			<div class="lock-size" layout="row" layout-align="center bottom">
 				<md-button aria-label="Home" class="md-raised"
-					ng-click="loginCtrl.goto('/home')"> <md-tooltip
-					md-direction="bottom" md-visible="tooltipVisible">Home</md-tooltip>
-				<md-icon>home</md-icon></md-button>
+					ng-click="loginCtrl.goto('/home')"> <md-icon>home</md-icon>
+				Home</md-button>
 				<md-button aria-label="Book" class="md-raised"
 					ng-click="loginCtrl.goto('/book')" ng-show="authenticated">
-				<md-tooltip md-direction="bottom" md-visible="tooltipVisible">Book</md-tooltip>
-				<md-icon>location_city</md-icon> </md-button>
+				<md-icon>location_city</md-icon> Book </md-button>
 				<md-button aria-label="Login" class="md-raised md-primary md-hue-3"
 					ng-click="loginCtrl.goto('/login-form')" ng-show="!authenticated">
-				<md-tooltip md-direction="bottom" md-visible="tooltipVisible">Login</md-tooltip>
-				<md-icon>account_circle</md-icon> </md-button>
+				<md-icon>account_circle</md-icon> Login </md-button>
 				<md-button aria-label="Logout" class="md-raised md-accent"
 					ng-click="loginCtrl.logout()" ng-show="authenticated">
-				<md-tooltip md-direction="bottom" md-visible="tooltipVisible">Logout</md-tooltip>
-				<md-icon>power_settings_new</md-icon></md-button>
+				<md-icon>power_settings_new</md-icon> Logout</md-button>
 			</div>
 			<span flex=""></span>
 		</div>
