Start to develop register process. Create register and address entities and start the front-end

--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -22,7 +22,8 @@
 				cadastro gratuíto e garanta seu acesso!</h3></span> </md-card-title-text> <md-card-title-media>
 		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
 			layout="row" layout-align="end center"> <md-button
-			class="md-raised md-accent md-hue-3">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
+			class="md-raised md-accent md-hue-3" ng-click="hmCtrl.goto('/register')">Iniciar
+		teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
 	</div>
 	<div layout layout-align="center center">
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
