--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,8 @@
 <script src="js/webirpf.js"></script>
 <script src="js/controller/login-controller.js"></script>
 <script src="js/controller/menu-controller.js"></script>
+<script src="js/controller/home-controller.js"></script>
+<script src="js/controller/register-controller.js"></script>
 <script src="js/controller/book-controller.js"></script>
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
