Still working on CPF validation

--- a/src/main/resources/static/partial/register.html
+++ b/src/main/resources/static/partial/register.html
@@ -17,8 +17,8 @@
 			required="required">
 		<div ng-messages="registerForm.cpf.$error" role="alert" multiple>
 			<div ng-message="required">Required Information!</div>
-			<div ng-message="validcpf">Invalid CPF!</div>
-			<div ng-message="uniquecpf">CPF already registered !</div>
+			<div ng-message="field.rejected">Invalid CPF!</div>
+			<div ng-message="cpf">CPF already registered !</div>
 		</div>
 		</md-input-container>
 		<div>
