Still working on CPF validation! Implement Validar on java class

--- a/src/main/resources/static/partial/register.html
+++ b/src/main/resources/static/partial/register.html
@@ -17,8 +17,7 @@
 			required="required">
 		<div ng-messages="registerForm.cpf.$error" role="alert" multiple>
 			<div ng-message="required">Required Information!</div>
-			<div ng-message="field.rejected">Invalid CPF!</div>
-			<div ng-message="cpf">CPF already registered !</div>
+			<div ng-message="cpferror">CPF Problem!</div>
 		</div>
 		</md-input-container>
 		<div>
