--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -8,8 +8,8 @@
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
 			md-theme="default" md-theme-watch> <md-card-title>
 		<md-card-title-text> <span class="md-headline">
-			Faça um teste ! </span> <span class="md-subhead"><h3>Conheça o
-				aplicativo sem necessidade de realizar um cadastro!</h3> </span> </md-card-title-text> <md-card-title-media>
+			Faça um teste ! </span> <span class="md-subhead">Conheça o aplicativo
+			sem necessidade de realizar um cadastro!</span> </md-card-title-text> <md-card-title-media>
 		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
 			layout="row" layout-align="end center"> <md-button
 			class="md-raised md-primary md-hue-3">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
@@ -18,19 +18,19 @@
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
 			md-theme="default" md-theme-watch> <md-card-title>
 		<md-card-title-text> <span class="md-headline">
-			Cadastro Gratuíto ! </span> <span class="md-subhead"><h3>Faça o
-				cadastro gratuíto e garanta seu acesso!</h3></span> </md-card-title-text> <md-card-title-media>
+			Cadastro Gratuíto ! </span> <span class="md-subhead">Faça o cadastro
+			gratuíto e garanta seu acesso!</span> </md-card-title-text> <md-card-title-media>
 		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
 			layout="row" layout-align="end center"> <md-button
-			class="md-raised md-accent md-hue-3" ng-click="hmCtrl.goto('/register')">Iniciar
-		teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
+			class="md-raised md-accent md-hue-3"
+			ng-click="hmCtrl.goto('/register')">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
 	</div>
 	<div layout layout-align="center center">
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
 			md-theme="default" md-theme-watch> <md-card-title>
 		<md-card-title-text> <span class="md-headline">
-			Plano Básico ! </span> <span class="md-subhead"><h3>Crie um
-				Plano Básico e tena acesso ao App Completo!</h3></span> </md-card-title-text> <md-card-title-media>
+			Plano Básico ! </span> <span class="md-subhead">Crie um Plano Básico
+			e tena acesso ao App Completo!</span> </md-card-title-text> <md-card-title-media>
 		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
 			layout="row" layout-align="end center"> <md-button
 			class="md-raised md-warn md-hue-3">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
