--- a/src/main/resources/static/partial/register.html
+++ b/src/main/resources/static/partial/register.html
@@ -1,7 +1,7 @@
 <div align="center" ng-cloak="">
 	<md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35"
 		flex-gt-md="25" layout layout-align="center center">
-	<form name="registerForm" ng-submit="add(register)"
+	<form name="registerForm" ng-submit="validate(register)"
 		novalidate="novalidate" method="post">
 		<input type="hidden" ng-model="register.id" name="id">
 		<md-input-container class="md-block"> <label>
@@ -11,15 +11,23 @@
 			<div ng-message="required">Required information!</div>
 		</div>
 		</md-input-container>
-		<md-divider></md-divider>
 		<md-input-container class="md-block"> <label>CPF:
 		</label> <md-icon>vpn_key</md-icon> <input ng-model="register.cpf" name="cpf"
-			required="required" mask="999.999.999-99"
+			required="required" mask="999.999.999-99" max-lenght="14"
 			ng-pattern="/^([0-9]{3}\.?[0-9]{3}\.?[0-9]{3}\-?[0-9]{2}|[0-9]{2}\.?[0-9]{3}\.?[0-9]{3}\/?[0-9]{4}\-?[0-9]{2})$/">
 		<div ng-messages="registerForm.cpf.$error" role="alert" multiple>
 			<div ng-message="required">Required Information!</div>
-			<div ng-message="cpferror">CPF Problem!</div>
-			<div ng-message="pattern">Invalid CPF!</div>
+			<div ng-message="cpf">Invalid CPF</div>
+			<div ng-message="pattern">Invalid CPF! Use 99.99.999-99 format!</div>
+		</div>
+		</md-input-container>
+		<md-input-container class="md-block"> <label>
+			E-Mail </label> <md-icon>account_circle</md-icon> <input
+			ng-model="register.email" name="email" required="required"
+			type="email">
+		<div ng-messages="registerForm.email.$error" role="alert" multiple>
+			<div ng-message="required">Required information!</div>
+			<div ng-message="email">Invalid E-Mail!</div>
 		</div>
 		</md-input-container>
 		<div>
