--- a/src/main/resources/static/partial/register.html
+++ b/src/main/resources/static/partial/register.html
@@ -1,4 +1,7 @@
 <div align="center" ng-cloak="">
+	<md-content> <md-tabs md-dynamic-height md-border-bottom>
+	<md-tab label="Register"> <md-content class="md-padding">
+	<h1 class="md-display-2">Register</h1>
 	<md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35"
 		flex-gt-md="25" layout layout-align="center center">
 	<form name="registerForm" ng-submit="validate(register)"
@@ -36,5 +39,33 @@
 			</md-button>
 		</div>
 	</form>
-	</md-whiteframe>
+	</md-whiteframe> </md-content> </md-tab> <md-tab label="Address"> <md-content class="md-padding">
+	<h1 class="md-display-2">Address</h1>
+	<md-whiteframe class="md-whiteframe-1dp" flex-sm="45" flex-gt-sm="35"
+		flex-gt-md="25" layout layout-align="center center">
+	<form name="addressForm" ng-submit="validateAddress(address)"
+		novalidate="novalidate" method="post">
+		<input type="hidden" ng-model="address.id" name="id">
+		<md-input-container class="md-block"> <label>
+			Name </label> <md-icon>account_circle</md-icon> <input
+			ng-model="address.cep" name="cep" required="required">
+		<div ng-messages="addressForm.cep.$error" role="alert" multiple>
+			<div ng-message="required">Required information!</div>
+		</div>
+		</md-input-container>
+		<div>
+			<md-button class="md-raised md-primary" type="submit"
+				aria-label="Submit" title="Submit"> <md-icon>save</md-icon>
+			</md-button>
+		</div>
+	</form>
+	</md-whiteframe> </md-content> </md-tab> </md-tabs> </md-content>
+
+
+
+
+
+
+
+
 </div>
