--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,6 +49,9 @@
 				<md-button aria-label="Book" class="md-raised"
 					ng-click="loginCtrl.goto('/book')" ng-show="authenticated">
 				<md-icon>location_city</md-icon> Book </md-button>
+				<md-button aria-label="Register" class="md-raised md-primary md-hue-3"
+					ng-click="loginCtrl.goto('/register')" ng-show="!authenticated">
+				<md-icon>lock_open</md-icon> Register </md-button>
 				<md-button aria-label="Login" class="md-raised md-primary md-hue-3"
 					ng-click="loginCtrl.goto('/login-form')" ng-show="!authenticated">
 				<md-icon>account_circle</md-icon> Login </md-button>
