Address validation with Rest Service, just like Register validation. Still need to find a mask solution for inputs. Do not forget that your angular still works with JQLite and not JQuery

--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -1,5 +1,5 @@
 <div layout="row">
-	<md-toolbar class="md-accent">
+	<md-toolbar class="md-primary md-hue-1">
 	<h2>IRPF App - Faça o teste agora !!</h2>
 	</md-toolbar>
 </div>
